--- a/data/index.html
+++ b/data/index.html
@@ -422,7 +422,7 @@
         </div>
         <div class="row progress-container" data-pg-collapsed id="greenProgressContainer">
             <div class="g-0 progress mx-auto">
-                <div aria-valuemax="120" aria-valuemin="0" aria-valuenow="0"
+                <div aria-valuemax="111" aria-valuemin="0" aria-valuenow="0"
                      class="progress-bar bg-success progress-bar-striped" id="progressBar" role="progressbar"
                      style="width:0%">
                     <span id="progressLabel"></span>
@@ -431,7 +431,7 @@
         </div>
         <div class="row progress-container" data-pg-collapsed id="redProgressContainer">
             <div class="g-0 progress mx-auto">
-                <div aria-valuemax="120" aria-valuemin="0" aria-valuenow="0"
+                <div aria-valuemax="111" aria-valuemin="0" aria-valuenow="0"
                      class="progress-bar bg-danger progress-bar-striped" id="TXprogressBAR" role="progressbar"
                      style="width:0%">
                     <span id="TXProgressLabel"></span>
@@ -662,7 +662,8 @@ function updateProgressBar() {
 
                 redProgressContainer.style.display = "none";
             } else if (n > 0) {
-                const percentage = Math.floor((n / 120) * 100); // Assuming max TX time is 120s
+
+                const percentage = Math.floor((n / 111) * 100);// closest practical value to 110.6
                 redProgressContainer.style.display = "block";
                 txProgressBar.style.width = `${percentage}%`;
                 txProgressBar.setAttribute("aria-valuenow", n);
