--- a/data/calibrate.html
+++ b/data/calibrate.html
@@ -54,24 +54,28 @@
                 <div class="save-button">
                     <button class="btn btn-success" onclick="saveNumber()" type="button">Save</button>
                 </div>
-                <div aria-hidden="true" aria-labelledby="saveModalLabel" class="modal fade" id="saveModal" tabindex="-1">
-                    <div class="modal-dialog">
-                        <div class="modal-content">
-                            <div class="modal-header">
-                                <h5 class="modal-title" id="saveModalLabel">Saving Calibration Factor</h5>
-                                <button aria-label="Close" class="close" data-bs-dismiss="modal" type="button"><span aria-hidden="true">&times;</span>
-                                </button>
-                            </div>
-                            <div class="modal-body">
-                                Calibration factor <span id="modalNumberDisplay"></span> has been saved, applied, and will be
-                                reused at each boot.
-                            </div>
-                            <div class="modal-footer">
-                                <button class="btn btn-secondary" data-bs-dismiss="modal" type="button">Close</button>
+
+
+
+                <!-- Modern Reboot Modal -->
+                <div class="modal fade" id="saveModal" tabindex="-1" aria-hidden="true">
+                    <div class="modal-dialog modal-dialog-centered">
+                        <div class="modal-content text-center">
+                            <div class="modal-body p-4">
+                                <h5 class="modal-title mb-3">✅ Calibration Saved</h5>
+                                <p class="mb-2">Calibration factor <strong id="modalNumberDisplay"></strong> has been saved and applied.</p>
+                                <p class="text-muted">The system will automatically reboot in a few seconds...</p>
+                                <div class="spinner-border text-success mt-3" role="status">
+                                    <span class="visually-hidden">Rebooting...</span>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
+
+
+
+
                 <div class="row">
                     <div class="container">
                         <h4 class="">Calibration Procedure</h4>
@@ -94,9 +98,10 @@
         <!-- JavaScript script -->
         <script>
     function initializePage() {
-        // Send request to set frequency and clock power when page loads
+        // Send request to start calibration when page loads
+        console.log("Send request to start calibration when page loads");
         const calibrationFrequ = 14; // Replace with an other value if needed
-        fetch(`/setFrequency?frequency=${calibrationFrequ}`)
+        fetch(`/startCalibtation`)
             .then(response => response.text())
             .then(data => console.log(data));
 
@@ -132,23 +137,27 @@
     function saveNumber() {
         var numberDisplay = document.getElementById('numberDisplay');
         var currentValue = numberDisplay.innerText;
-        // Send request to save the calibration factor
+
+        // Save calFactor to ESP
         fetch(`/saveCalFactor?calFactor=${currentValue}`)
             .then(response => response.text())
             .then(data => {
                 console.log(data);
-                // Update modal content
+
+                // Update modal text
                 document.getElementById('modalNumberDisplay').innerText = currentValue;
-                // Show the modal using Bootstrap's JavaScript API
+
+                // Show Bootstrap modal
                 var modal = new bootstrap.Modal(document.getElementById('saveModal'));
                 modal.show();
 
-                // Add event listener for modal close to redirect
-                var saveModalElement = document.getElementById('saveModal');
-                saveModalElement.addEventListener('hidden.bs.modal', function (event) {
-                    window.location.href = '/';
-                });
+                // After 3 seconds, trigger reboot
+                setTimeout(() => {
+                    console.log("Triggering reboot...");
+                    fetch('/reboot');  // <-- THIS IS THE REBOOT CALL
+                }, 3000);
             });
+
     }
 </script>
         <script crossorigin="anonymous" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
