adapted for Iphone

--- a/data/index.html
+++ b/data/index.html
@@ -16,25 +16,15 @@
     <body class="d-flex flex-column h-100">
         <header>
             <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-                <div class="container-fluid">
-                    <a class="navbar-brand" href="">Web WSPR Beacon</a>
+                <div class="container-fluid"><a class="navbar-brand" href="">Web WSPR Beacon</a>
                     <button aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler
-" data-bs-target="#navbarCollapse" data-bs-toggle="collapse" type="button">
-                        <span class="navbar-toggler-icon"></span>
+" data-bs-target="#navbarCollapse" data-bs-toggle="collapse" type="button"><span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarCollapse">
                         <ul class="navbar-nav me-auto mb-2 mb-md-0">
-                            <li class="nav-item">
-                                <a class="active nav-link" href="https://wspr.rocks/" target="_blank">wspr.rocks</a>
+                            <li class="nav-item"><a class="active nav-link" href="https://wspr.rocks/" target="_blank">wspr.rocks</a>
                             </li>
-                            <li class="nav-item">
-                                <a class="active nav-link" href="http://websdr.org/" target="_blank">websdr.org</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="active nav-link" href="http://kiwisdr.com/.public/" target="_blank">kiwisdr.com</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="active nav-link" href="https://github.com/HB9IIU" target="_blank">gituHub</a>
+                            <li class="nav-item"><a class="active nav-link" href="https://github.com/HB9IIU/ESP32-SIMPLE-WSPR-TRANSMITTER-NO-DISPLAY" target="_blank">gituHub</a>
                             </li>
                         </ul>
                     </div>
@@ -59,8 +49,7 @@
                                     <div class="d-inline-flex align-items-center" id="wrap-80m">
                                         <input class="form-check-input me-2" id="chk-80m" type="checkbox" value="">
                                         <div class="d-inline-flex align-items-center px-2 py-1 rounded" id="color-80m">
-                                            <label class="form-check-label me-2" for="chk-80m">
-                                                <strong id="label-80m">80 m</strong>
+                                            <label class="form-check-label me-2" for="chk-80m"><strong id="label-80m">80 m</strong>
                                             </label>
                                             <div id="freq-80m-cb">3.570.000 Hz</div>
                                         </div>
@@ -74,8 +63,7 @@
                                     <div class="d-inline-flex align-items-center" id="wrap-40m">
                                         <input class="form-check-input me-2" id="chk-40m" type="checkbox" value="">
                                         <div class="d-inline-flex align-items-center px-2 py-1 rounded" id="color-40m">
-                                            <label class="form-check-label me-2" for="chk-40m">
-                                                <strong id="label-40m">40 m</strong>
+                                            <label class="form-check-label me-2" for="chk-40m"><strong id="label-40m">40 m</strong>
                                             </label>
                                             <div id="freq-40m-cb">7.040.000 Hz</div>
                                         </div>
@@ -90,8 +78,7 @@
                                     <div class="d-inline-flex align-items-center" id="wrap-30m">
                                         <input class="form-check-input me-2" id="chk-30m" type="checkbox" value="">
                                         <div class="d-inline-flex align-items-center px-2 py-1 rounded" id="color-30m">
-                                            <label class="form-check-label me-2" for="chk-30m">
-                                                <strong id="label-30m">30 m</strong>
+                                            <label class="form-check-label me-2" for="chk-30m"><strong id="label-30m">30 m</strong>
                                             </label>
                                             <div id="freq-30m-cb">10.140.100 Hz</div>
                                         </div>
@@ -105,8 +92,7 @@
                                     <div class="d-inline-flex align-items-center" id="wrap-20m">
                                         <input class="form-check-input me-2" id="chk-20m" type="checkbox" value="">
                                         <div class="d-inline-flex align-items-center px-2 py-1 rounded" id="color-20m">
-                                            <label class="form-check-label me-2" for="chk-20m">
-                                                <strong id="label-20m">20 m</strong>
+                                            <label class="form-check-label me-2" for="chk-20m"><strong id="label-20m">20 m</strong>
                                             </label>
                                             <div id="freq-20m-cb">14.097.000 Hz</div>
                                         </div>
@@ -120,8 +106,7 @@
                                     <div class="d-inline-flex align-items-center" id="wrap-17m">
                                         <input class="form-check-input me-2" id="chk-17m" type="checkbox" value="">
                                         <div class="d-inline-flex align-items-center px-2 py-1 rounded" id="color-17m">
-                                            <label class="form-check-label me-2" for="chk-17m">
-                                                <strong id="label-17m">17 m</strong>
+                                            <label class="form-check-label me-2" for="chk-17m"><strong id="label-17m">17 m</strong>
                                             </label>
                                             <div id="freq-17m-cb">18.106.000 Hz</div>
                                         </div>
@@ -135,8 +120,7 @@
                                     <div class="d-inline-flex align-items-center" id="wrap-15m">
                                         <input class="form-check-input me-2" id="chk-15m" type="checkbox" value="">
                                         <div class="d-inline-flex align-items-center px-2 py-1 rounded" id="color-15m">
-                                            <label class="form-check-label me-2" for="chk-15m">
-                                                <strong id="label-15m">15 m</strong>
+                                            <label class="form-check-label me-2" for="chk-15m"><strong id="label-15m">15 m</strong>
                                             </label>
                                             <div id="freq-15m-cb">21.096.000 Hz</div>
                                         </div>
@@ -150,8 +134,7 @@
                                     <div class="d-inline-flex align-items-center" id="wrap-12m">
                                         <input class="form-check-input me-2" id="chk-12m" type="checkbox" value="">
                                         <div class="d-inline-flex align-items-center px-2 py-1 rounded" id="color-12m">
-                                            <label class="form-check-label me-2" for="chk-12m">
-                                                <strong id="label-12m">12 m</strong>
+                                            <label class="form-check-label me-2" for="chk-12m"><strong id="label-12m">12 m</strong>
                                             </label>
                                             <div id="freq-12m-cb">24.926.000 Hz</div>
                                         </div>
@@ -165,8 +148,7 @@
                                     <div class="d-inline-flex align-items-center" id="wrap-10m">
                                         <input class="form-check-input me-2" id="chk-10m" type="checkbox" value="">
                                         <div class="d-inline-flex align-items-center px-2 py-1 rounded" id="color-10m">
-                                            <label class="form-check-label me-2" for="chk-10m">
-                                                <strong id="label-10m">10 m</strong>
+                                            <label class="form-check-label me-2" for="chk-10m"><strong id="label-10m">10 m</strong>
                                             </label>
                                             <div id="freq-10m-cb">28.126.000 Hz</div>
                                         </div>
@@ -180,8 +162,7 @@
                                     <div class="d-inline-flex align-items-center" id="wrap-6m">
                                         <input class="form-check-input me-2" id="chk-6m" type="checkbox" value="">
                                         <div class="d-inline-flex align-items-center px-2 py-1 rounded" id="color-6m">
-                                            <label class="form-check-label me-2" for="chk-6m">
-                                                <strong id="label-6m">6 m</strong>
+                                            <label class="form-check-label me-2" for="chk-6m"><strong id="label-6m">6 m</strong>
                                             </label>
                                             <div id="freq-6m-cb">50.293.000 Hz</div>
                                         </div>
@@ -298,15 +279,13 @@
                 </div>
                 <div class="row progress-container" data-pg-collapsed id="greenProgressContainer">
                     <div class="g-0 progress mx-auto">
-                        <div aria-valuemax="111" aria-valuemin="0" aria-valuenow="0" class="progress-bar bg-success progress-bar-striped" id="progressBar" role="progressbar" style="width:0%">
-                            <span id="progressLabel"></span>
+                        <div aria-valuemax="111" aria-valuemin="0" aria-valuenow="0" class="progress-bar bg-success progress-bar-striped" id="progressBar" role="progressbar" style="width:0%"><span id="progressLabel"></span>
                         </div>
                     </div>
                 </div>
                 <div class="row progress-container" data-pg-collapsed id="redProgressContainer">
                     <div class="g-0 progress mx-auto">
-                        <div aria-valuemax="111" aria-valuemin="0" aria-valuenow="0" class="progress-bar bg-danger progress-bar-striped" id="TXprogressBAR" role="progressbar" style="width:0%">
-                            <span id="TXProgressLabel"></span>
+                        <div aria-valuemax="111" aria-valuemin="0" aria-valuenow="0" class="progress-bar bg-danger progress-bar-striped" id="TXprogressBAR" role="progressbar" style="width:0%"><span id="TXProgressLabel"></span>
                         </div>
                     </div>
                 </div>
@@ -335,14 +314,14 @@
                     </div>
                 </div>
                 <div class="d-flex justify-content-center mt-5" data-pg-collapsed id="loadingSpinner">
-                    <div class="spinner-border text-primary" role="status">
-                        <span class="visually-hidden">Loading...</span>
+                    <div class="spinner-border text-primary" role="status"><span class="visually-hidden">Loading...</span>
                     </div>
                 </div>
             </div>
         </main>
         <footer class="footer mt-auto py-3 bg-light" data-pg-collapsed>
-            <div class="container"><span class="text-muted">HB9IIU May 2025</span>
+            <div class="container">
+                <span class="text-muted">HB9IIU May 2025</span>
             </div>
         </footer>
         <div id="overlay">
@@ -987,8 +966,8 @@ document.addEventListener("DOMContentLoaded", function () {
         .catch(err => {
             console.error("Error fetching modeOfOperation:", err);
             // Optional: show a blocker if the fetch fails
-            document.getElementById("blockerOverlay").style.display = "flex";
-            document.getElementById("blockerMessage").textContent = "Unable to determine mode of operation.";
+            //document.getElementById("blockerOverlay").style.display = "flex";
+           // document.getElementById("blockerMessage").textContent = "Unable to determine mode of operation.";
         });
 
 
