--- a/data/index.html
+++ b/data/index.html
@@ -214,7 +214,7 @@
                             </div>
                         </div>
                         <div class="row align-items-center g-0">
-                            <div class="text-center" id="WSPRclock" style="text-align:center;margin-top:10px"></div>
+                            <div class="text-center d-none d-md-block" id="WSPRclock" style="text-align:center;margin-top:10px"></div>
                         </div>
                     </div>
                     <div class="col-4 col-lg-4 col-md-4 col-sm-4 col-xl-4 col-xxl-4" data-pg-collapsed>
@@ -242,7 +242,7 @@
                             ..dBm</p>
                             </div>
                             <div class="col-md-6">
-                                <img class="img-fluid text-center" src="assets/wsprlogo.png" style="max-width:100%;height:auto">
+                                <img class="img-fluid text-center d-none d-md-block" src="assets/wsprlogo.png" style="max-width:100%;height:auto">
                             </div>
                         </div>
                         <div class="container mt-auto">
